@@ -1,3 +1,9 @@
+2009-06-04  Steven G. Kargl  <kargl@gcc.gnu.org>
+
+	PR fortran/39893
+	* gfortran.dg/assumed_charlen_dummy.f90: New Test.
+
+
 2009-06-04  Richard Guenther  <rguenther@suse.de>
 
 	PR c++/39371
